--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crack Code Lab - Learn, Build, and Grow</title>
+    <title>Crack Code Lab</title>
     
     <!-- Google Fonts: Poppins, Inter, Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1254,4 +1254,5 @@
 
 </body>
 </html>
+
 
